--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "check": "tsc",
+    "lint": "eslint",
     "dev": "vite",
     "build": "tsc && vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,8 +14,12 @@
   "license": "ISC",
   "description": "a music visualizer web app",
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/three": "^0.168.0",
+    "eslint": "^9.10.0",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.4.0",
     "vite": "^5.4.2"
   },
   "dependencies": {
